// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`forwards ref 1`] = `
<ForwardRef(forwardRef)
  className=""
  classes={Object {}}
  data-color="regular"
  data-variant="regular"
>
  Push me
</ForwardRef(forwardRef)>
`;

exports[`renders a regular sized, primary colored ghost button with fullWidth 1`] = `
<ForwardRef(forwardRef)
  className="sizeRegular colorPrimary variantGhost fullWidth"
  classes={Object {}}
  data-color="primary"
  data-variant="ghost"
>
  Push me
</ForwardRef(forwardRef)>
`;

exports[`renders active state 1`] = `
<ForwardRef(forwardRef)
  className="active"
  classes={Object {}}
  data-color="regular"
  data-variant="regular"
>
  Push me
</ForwardRef(forwardRef)>
`;

exports[`renders correctly 1`] = `
<ForwardRef(forwardRef)
  className=""
  classes={
    Object {
      "keyboardFocus": "keyboardFocus",
      "mouseHover": "mouseHover",
    }
  }
  data-color="regular"
  data-variant="regular"
>
  Push me
</ForwardRef(forwardRef)>
`;
